# baudo-engine

./: CMakeLists.txt  README.md  test.bem  test.test
include/: baudo_engine.h  file.h  math_fn.h  object.h  shader.h
shader/: select.frag  select.vert  standard.frag  standard.vert
src/: baudo_engine.c  file.c  main.c  object.c  shader.c
